# hedge-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
hedge/: CMakeLists.txt  hedge.cpp  hedge.hpp  hedge_test.cpp
hedge/tests/: core_types.cpp  high_level_api.cpp  kernel_operations.cpp
include/: hedge.hpp
scratch/: main.cpp
src/: hedge.cpp
tests/: core_types.cpp
